--- a/src/Resources/views/User/list_ratings.html.twig
+++ b/src/Resources/views/User/list_ratings.html.twig
@@ -15,57 +15,5 @@
 {% endblock %}
 
 {% block body %}
-  {#<div class="count">#}
-  {#{{ ratings.getTotalItemCount }}#}
-  {#</div>#}
-  <div class="panel panel-white">
-    <div class="table-responsive" style="display: block;">
-      <table class="table">
-        <thead>
-        <tr>
-          <th>{{ knp_pagination_sortable(ratings, 'users.ratings.coaster'|trans, 'c.name') }}</th>
-          <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'users.ratings.manufacturer'|trans, ['m.name']) }}</th>
-          <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'users.ratings.opening_date'|trans, ['c.openingDate']) }}</th>
-          <th>{{ knp_pagination_sortable(ratings, 'users.ratings.rating'|trans, ['r.value']) }}</th>
-          <th class="hidden-xs">{{ knp_pagination_sortable(ratings, 'users.ratings.rated_at'|trans, 'r.updatedAt') }}</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for rating in ratings %}
-          <tr id="tr-coaster-{{ rating.coaster.id }}">
-            <td>
-              <a href="{{ path('bdd_show_coaster', {'slug': rating.coaster.slug}) }}"
-                 class="text-semibold">{{ rating.coaster.name }}</a>
-              <div class="text-muted text-size-small">
-                <span class="status-mark bg-{{ rating.coaster.status.type }} position-left"></span>
-                <a class="text-muted"
-                   href="{{ path('park_show', {'slug': rating.coaster.park.slug}) }}">
-                  {{ rating.coaster.park.name }}
-                </a>
-
-              </div>
-            </td>
-            <td class="hidden-xs">
-              {{ rating.coaster.manufacturer.name }}
-            </td>
-            <td class="hidden-xs">
-              {{ rating.coaster.openingDate is empty ? '-' : rating.coaster.openingDate|date('Y') }}
-            </td>
-            <td>
-              <div class="rating-coaster"
-                   data-coaster="{{ rating.coaster.id }}"
-                   data-rateit-value="{{ rating.value }}"
-                   data-rateit-readonly="true"
-                   style="font-size: 22px;"></div>
-            </td>
-            <td class="hidden-xs">
-              {{ helper.displayDate(rating.updatedAt) }}
-            </td>
-          </tr>
-        {% endfor %}
-        </tbody>
-      </table>
-    </div>
-  </div>
-  {{ knp_pagination_render(ratings) }}
+  {% include 'Includes/rating_table.html.twig' with {'ratings': ratings, 'allowDelete': false} only %}
 {% endblock %}
