--- a/src/Resources/views/User/list_ratings.html.twig
+++ b/src/Resources/views/User/list_ratings.html.twig
@@ -15,5 +15,5 @@
 {% endblock %}
 
 {% block body %}
-  {% include 'Includes/rating_table.html.twig' with {'ratings': ratings, 'allowDelete': false} only %}
+  {% include 'Includes/rating_table.html.twig' with {'ratings': ratings} only %}
 {% endblock %}
