update facebook login button

--- a/templates/bundles/HWIOAuthBundle/Connect/login.html.twig
+++ b/templates/bundles/HWIOAuthBundle/Connect/login.html.twig
@@ -38,14 +38,14 @@
                         <ul class="list-inline form-group list-inline-condensed text-center">
                             {#{% for owner in hwi_oauth_resource_owners() %}#}
                             {% set referer = app.request.server.get('HTTP_REFERER')|default('/') %}
-                            <li>
-                                <a href="{{ hwi_oauth_login_url('facebook') }}?target_path={{ referer }}" class="btn btn-flat bg-indigo">
-                                    <i class="icon-facebook position-left"></i> {{ 'login.connect'|trans }}
+                            <li class="mb-5" style="padding:0;">
+                                <a href="{{ hwi_oauth_login_url('facebook') }}?target_path={{ referer }}" class="btn btn-flat" style="background-color: #4267B2; color: #FFFFFF;">
+                                    <i class="icon-facebook position-left"></i> {{ 'login.facebook_connect'|trans }}
                                 </a>
                             </li>
                             <li>
                                 <a href="{{ hwi_oauth_login_url('google') }}?target_path={{ referer }}" class="btn btn-flat bg-danger-800">
-                                    <i class="icon-google position-left"></i> {{ 'login.connect'|trans }}
+                                    <i class="icon-google position-left"></i> {{ 'login.google_connect'|trans }}
                                 </a>
                             </li>
                             {#{% endfor %}#}
