--- a/templates/Coaster/show.html.twig
+++ b/templates/Coaster/show.html.twig
@@ -246,16 +246,16 @@
       </div>
       <!-- /coasters in park -->
       <!-- coaster location -->
-      {% if coaster.park.latitude and coaster.park.longitude %}
-        <div class="panel panel-flat">
-          <div class="panel-heading">
-            <h5 class="panel-title">{{ 'coaster.location'|trans }}</h5>
-          </div>
-          <div class="panel-body">
-            <div id="map-coaster" class="map-container" style="height:250px;"></div>
-          </div>
-        </div>
-      {% endif %}
+{#      {% if coaster.park.latitude and coaster.park.longitude %}#}
+{#        <div class="panel panel-flat">#}
+{#          <div class="panel-heading">#}
+{#            <h5 class="panel-title">{{ 'coaster.location'|trans }}</h5>#}
+{#          </div>#}
+{#          <div class="panel-body">#}
+{#            <div id="map-coaster" class="map-container" style="height:250px;"></div>#}
+{#          </div>#}
+{#        </div>#}
+{#      {% endif %}#}
       <!-- /coaster location -->
     </div>
     <div class="col-sm-9">
@@ -284,9 +284,9 @@
             });
         }
     </script>
-    <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9GhjdRtYf1BNtxx-rLJJwNl2n2CDUev4&callback=initMap">
-    </script>
+{#    <script async defer#}
+{#            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9GhjdRtYf1BNtxx-rLJJwNl2n2CDUev4&callback=initMap">#}
+{#    </script>#}
   {% endif %}
   <script src="{{ asset('js/plugins/bootstrap-datepicker/bootstrap-datepicker.min.js') }}"></script>
   <script type="text/javascript">
