--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,7 @@
   <link rel="manifest" href="{{ asset('manifest.json') }}">
   {% block header %}{% endblock %}
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900" rel="stylesheet" type="text/css">
-  <link href="{{ asset('build/main.css') }}" rel="stylesheet"/>
+  {{ encore_entry_link_tags('app') }}
   {% block stylesheets %}{% endblock %}
 </head>
 <body class="navbar-top {% if openedSidebar is not defined %}sidebar-xs{% endif %}">
@@ -60,6 +60,7 @@
 </div>
 <!-- /page container -->
 <!-- Core JS files -->
+{{ encore_entry_script_tags('app') }}
 <script type="text/javascript" src="{{ asset('js/core/libraries/jquery.min.js') }}"></script>
 <script type="text/javascript" src="{{ asset('js/core/libraries/bootstrap.min.js') }}"></script>
 <!-- /core JS files -->
