--- a/templates/Park/show.html.twig
+++ b/templates/Park/show.html.twig
@@ -32,16 +32,7 @@
       </div>
       <!-- /park stats -->
       <!-- coaster location -->
-      {% if park.latitude and park.longitude %}
-        <div class="panel panel-flat">
-          <div class="panel-heading">
-            <h5 class="panel-title">{{ 'coaster.location'|trans }}</h5>
-          </div>
-          <div class="panel-body">
-            <div id="map-coaster" class="map-container" style="height:250px;"></div>
-          </div>
-        </div>
-      {% endif %}
+      <!-- removed until open street maps -->
       <!-- /coaster location -->
     </div>
     <div class="col-sm-9">
@@ -98,24 +89,6 @@
 {% endblock %}
 
 {% block javascripts %}
-  {% if park.latitude and park.longitude %}
-    <script>
-      function initMap() {
-        var uluru = {lat: {{ park.latitude }}, lng: {{ park.longitude }}};
-        var map = new google.maps.Map(document.getElementById('map-coaster'), {
-          zoom: 14,
-          center: uluru,
-        });
-        var marker = new google.maps.Marker({
-          position: uluru,
-          map: map,
-        });
-      }
-    </script>
-    <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9GhjdRtYf1BNtxx-rLJJwNl2n2CDUev4&callback=initMap">
-    </script>
-  {% endif %}
   <script src="{{ asset('js/plugins/rateit/jquery.rateit.min.js') }}"></script>
   <script src="{{ asset('js/pages/rating.js') }}"></script>
 {% endblock %}
