fix pager ranking

--- a/templates/Ranking/filters.html.twig
+++ b/templates/Ranking/filters.html.twig
@@ -86,6 +86,7 @@
           </div>
         </div>
       </div>
+      <input type="hidden" name="page" id="filter-page" value="{{ qS.page|default(1) }}">
     </form>
   </div>
 </div>
