fix translation on review form

--- a/templates/Review/form.html.twig
+++ b/templates/Review/form.html.twig
@@ -1,5 +1,5 @@
 {% extends "base.html.twig" %}
-{% set title = 'Avis sur ' ~ coaster.name %}
+{% set title = 'review.form.title'|trans({'%name%': coaster.name}) %}
 {% set subTitle = '' %}
 {% block title %}{{ title }}{% endblock %}
 
