--- a/templates/bundles/HWIOAuthBundle/Connect/login.html.twig
+++ b/templates/bundles/HWIOAuthBundle/Connect/login.html.twig
@@ -9,7 +9,7 @@
     <!-- Global stylesheets -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900" rel="stylesheet"
           type="text/css">
-    <link href="{{ asset('build/main.css') }}" rel="stylesheet" type="text/css">
+    {{ encore_entry_link_tags('app') }}
     <!-- /global stylesheets -->
 </head>
 
