--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,5 +1,5 @@
 <div class="footer text-muted">
     &copy; {{ 'now'|date('Y') }}.
     Crafted with <i class="icon-heart6"></i> by French coaster enthusiasts.
-    <a href="{{ path('default_terms') }}">{{ 'footer.terms'|trans }}</a>
+    <a href="{{ path('default_privacy_policy') }}">{{ 'footer.terms'|trans }}</a>
 </div>
