Reviews sur un coaster non notable
Enlève les deux boutons "Envoyer mon avis" dans reviews.html.twig si le statut du coaster n'est pas notable

--- a/templates/Coaster/reviews.html.twig
+++ b/templates/Coaster/reviews.html.twig
@@ -8,11 +8,13 @@
         {{ 'review.title'|trans }}
         &nbsp;<span class="badge badge-primary">{{ reviews|length }}</span>
       </h6>
-      <div class="pull-right">
-        <a class="text-muted" href="{{ path('review_form', {'id': reviews.0.coaster.id}) }}">
-          {{ 'review.send'|trans() }}
-        </a>
-      </div>
+      {% if coaster.isRateable %}
+        <div class="pull-right">
+          <a class="text-muted" href="{{ path('review_form', {'id': reviews.0.coaster.id}) }}">
+            {{ 'review.send'|trans() }}
+          </a>
+        </div>
+      {% endif %}
     </div>
 
     <div class="panel-body">
@@ -75,14 +77,16 @@
         {% endfor %}
       </ul>
     </div>
-    <div class="panel-body">
-      <a href="{{ path('review_form', {'id': reviews.0.coaster.id}) }}">
-        <button type="button" class="btn bg-blue">
-          <i class="icon-plus22"></i>
-          {{ 'review.send'| trans() }}
-        </button>
-      </a>
-    </div>
+    {% if coaster.isRateable %}
+      <div class="panel-body">
+        <a href="{{ path('review_form', {'id': reviews.0.coaster.id}) }}">
+          <button type="button" class="btn bg-blue">
+            <i class="icon-plus22"></i>
+            {{ 'review.send'| trans() }}
+          </button>
+        </a>
+      </div>
+    {% endif %}
   </div>
   <!-- /comments -->
 </div>
